<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline2"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline1"
            app:layout_constraintTop_toTopOf="@+id/horizontal_guideline1">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/main_city"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/main_bg_color"
                app:boxStrokeColor="@color/main_bg_color"
                app:boxStrokeWidth="0dp"
                app:endIconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_location"
                app:startIconTint="@color/white">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:editable="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:theme="@style/bgColor"
                    tools:ignore="Deprecated" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_notification"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.20" />

        <ImageView
            android:id="@+id/iv_main_weather"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="@dimen/_32sdp"
            android:layout_marginRight="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline3"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline2"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline1"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guideline2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/constraint_background"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline2"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline1"
            app:layout_constraintTop_toBottomOf="@id/horizontal_guideline3">

            <TextView
                android:id="@+id/tv_main_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/overpass_regular"
                android:paddingTop="@dimen/_16sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toTopOf="@+id/tv_main_temperature"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_main_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/overpass_regular"
                android:shadowColor="#808080"
                android:shadowDx="-5"
                android:shadowDy="-5"
                android:shadowRadius="20"
                android:textColor="@color/white"
                android:textSize="@dimen/_56sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_main_date" />

            <TextView
                android:id="@+id/tv_main_weather_text_descr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/overpass_regular"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_main_temperature" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_main_weather_text_descr">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/vertical_guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <ImageView
                    android:id="@+id/iv_main_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:src="@drawable/ic_windy"
                    app:layout_constraintBottom_toTopOf="@+id/iv_main_humidity"
                    app:layout_constraintEnd_toStartOf="@+id/tv_main_wind_text"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_main_wind_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:fontFamily="@font/overpass_regular"
                    android:text="@string/wind"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_main_humidity_text"
                    app:layout_constraintEnd_toStartOf="@+id/tv_main_separator2"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_main_separator1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:fontFamily="@font/overpass_regular"
                    android:text="@string/separator"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_main_separator2"
                    app:layout_constraintEnd_toStartOf="@+id/vertical_guideline3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_main_wind_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:layout_marginBottom="@dimen/_6sdp"
                    android:fontFamily="@font/overpass_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toTopOf="@+id/tv_main_humidity_value"
                    app:layout_constraintStart_toEndOf="@+id/tv_main_separator1"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iv_main_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:src="@drawable/ic_humidity"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_main_humidity_text"
                    app:layout_constraintTop_toBottomOf="@+id/iv_main_wind" />

                <TextView
                    android:id="@+id/tv_main_humidity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_16sdp"
                    android:fontFamily="@font/overpass_regular"
                    android:text="@string/humidity"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/tv_main_separator2"
                    app:layout_constraintTop_toBottomOf="@+id/tv_main_wind_text" />

                <TextView
                    android:id="@+id/tv_main_separator2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/overpass_regular"
                    android:text="@string/separator"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/vertical_guideline3"
                    app:layout_constraintTop_toBottomOf="@+id/tv_main_separator1" />

                <TextView
                    android:id="@+id/tv_main_humidity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_16sdp"
                    android:fontFamily="@font/overpass_regular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/tv_main_separator2"
                    app:layout_constraintTop_toBottomOf="@+id/tv_main_wind_value" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/btn_main_forecast_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/overpass_regular"
            android:padding="@dimen/_12sdp"
            android:text="@string/forecast_report"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/horizontal_guideline4"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline2"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>